--- a/jdiff.man
+++ b/jdiff.man
@@ -26,7 +26,7 @@ This can use far less system resources than diff(1)
 when comparing Extremely Large Files.
 .PP
 If only one File is specified or one of the File Names is '-',
-stdin will be used for that file.
+stdin will be used for that File.
 .TP
 -b n
 Optional, set Read Buffer to size 'n'.
@@ -39,6 +39,14 @@ Show brief help and exit.
 Optional, Print no more than 'n' differences.
 Default, print a maximum of 2000 lines of differences.
 Set to zero to print all differences.
+Note, see argument '-q' below.
+.TP
+-q
+Do not print any output, only output printed will
+be errors.
+This will override the settings of Arguments '-m' and '-v'.
+Default, show data based upon defaults or arguments
+specified.
 .TP
 -V
 Output version information and exit.
@@ -48,7 +56,7 @@ Optional, Verbose Level.
 Print information on stderr about the run,
 default do not show run messages.
 Can be specified multiple times,
-each specification increases verbose level:
+each specification increases verbose level (Note, see '-q' above):
 .nf
     Level  Meaning
     -----  --------------------------------------------
@@ -62,7 +70,7 @@ each specification increases verbose level:
 Since the purpose of this Utility
 is to diff very large files, differences
 printed will be limited.
-This behavior can be changed by Argument '-m'.
+This behavior can be changed by Arguments '-m' and '-q'.
 .PP
 Does not print output in standard diff(1) format.
 Outputs File Number (F1/F2), Record Number, Item that differs.
